deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cdk-web
  labels:
    app: cdk-web
spec:
  type: ClusterIP
  selector:
    app: cdk-web
  ports:
  - name: http
    port: 8080
    targetPort: http
